--- a/pom.xml
+++ b/pom.xml
@@ -10,8 +10,9 @@
     <modules>
         <module>api-common</module>
         <module>register-center</module>
-        <module>oauth-server</module>
+        <module>oauth-server-8001</module>
         <module>provider-8002</module>
+        <module>dipo-9001</module>
     </modules>
     <packaging>pom</packaging>
 
