--- a/oauth-resource/src/main/resources/application.yml
+++ b/oauth-resource/src/main/resources/application.yml
@@ -4,3 +4,15 @@ server:
 spring:
   main:
     allow-bean-definition-overriding: true
+  application:
+    name: res1
+
+eureka:
+  instance:
+    instance-id: aouth-res-id
+    prefer-ip-address: true
+  client:
+    register-with-eureka: true
+    fetch-registry: true
+    service-url:
+      defaultZone: http://localhost:7001/eureka
