--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
         <module>provider-8002</module>
         <module>dipo-9001</module>
         <module>oauth-resource</module>
+        <module>cloud-gateway</module>
     </modules>
     <packaging>pom</packaging>
 
@@ -38,7 +39,6 @@
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
-
 <!--            <dependency>-->
 <!--                <groupId>javax.servlet</groupId>-->
 <!--                <artifactId>javax.servlet-api</artifactId>-->
