--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,4 @@
-# Compiled class file
 *.class
-
-# Log file
-*.log
-
-# BlueJ files
-*.ctxt
 
 # Mobile Tools for Java (J2ME)
 .mtj.tmp/
@@ -13,13 +6,31 @@
 # Package Files #
 *.jar
 *.war
-*.nar
 *.ear
-*.zip
-*.tar.gz
-*.rar
+
+# Eclipse Forlders
+Servers/
+target/
+.metadata/
+.recommenders/
+.settings/
+
+# Eclise Files
+.classpath
+.project
+.springBeans
+.factorypath
+
+# Idea Files
+*.iml
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 
-target/
+# Idea
+.iml
+.idea/
+
+# Personal 并未使用properties, 使用yml
+.lst
+.properties
