--- a/.gitignore
+++ b/.gitignore
@@ -1,37 +1,31 @@
-*.class
-
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
-
-# Package Files #
-*.jar
-*.war
-*.ear
-
-# Eclipse Forlders
-Servers/
-target/
-classes/
-.metadata/
-.recommenders/
-.settings/
-
-# Eclise Files
+HELP.md
+/target/
+!.mvn/wrapper/maven-wrapper.jar
+/*/target/
+### STS ###
+.apt_generated
 .classpath
-.project
-.springBeans
 .factorypath
-
-# Idea Files
+.project
+.settings
+.springBeans
+.sts4-cache
+ 
+### IntelliJ IDEA ###
+.idea
+*.iws
 *.iml
-
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
-
-# Idea
-.iml
-.idea/
-
-# Personal 并未使用properties, 使用yml
-.lst
-.properties
+*.ipr
+*.class
+*.lst
+ 
+### NetBeans ###
+/nbproject/private/
+/nbbuild/
+/dist/
+/nbdist/
+/.nb-gradle/
+/build/
+ 
+### VS Code ###
+.vscode/
