--- a/dipo-9001/pom.xml
+++ b/dipo-9001/pom.xml
@@ -15,6 +15,17 @@
     <dependencies>
 
         <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>druid</artifactId>
+            <version>1.1.12</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-jpa</artifactId>
+        </dependency>
+
+        <dependency>
             <groupId>cn.chenshaotong</groupId>
             <artifactId>api-common</artifactId>
             <version>1.0-SNAPSHOT</version>
