--- a/dipo-9001/src/main/resources/application.yml
+++ b/dipo-9001/src/main/resources/application.yml
@@ -6,6 +6,17 @@ spring:
     name: dipo
   thymeleaf:
     prefix: classpath:/templates/
+  datasource:
+    url: jdbc:mysql://106.55.23.102:3306/chenst
+    type: com.alibaba.druid.pool.DruidDataSource
+    username: root
+    password: Qq1131460769@
+    driver-class-name: com.mysql.jdbc.Driver
+  jpa:
+    hibernate:
+      ddl-auto: update
+    show-sql: true
+    database-platform: org.hibernate.dialect.MySQL5Dialect
 
 eureka:
   instance:
@@ -16,3 +27,4 @@ eureka:
     fetch-registry: true
     service-url:
       defaultZone: http://localhost:7001/eureka
+
