简单的页面

--- a/dipo-9001/src/main/resources/application.yml
+++ b/dipo-9001/src/main/resources/application.yml
@@ -1,5 +1,7 @@
 server:
   port: 9001
+#  error:
+#    path: /
 
 spring:
   application:
@@ -17,6 +19,7 @@ spring:
       ddl-auto: create
     show-sql: true
     database-platform: org.hibernate.dialect.MySQL5Dialect
+
 
 eureka:
   instance:
