--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
     <packaging>pom</packaging>
 
     <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <spring.boot.version>2.2.2.RELEASE</spring.boot.version>
         <lombok.version>1.18.12</lombok.version>
     </properties>
@@ -89,6 +90,7 @@
 
 
     <build>
+        <pluginManagement>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -109,6 +111,7 @@
                 </configuration>
             </plugin>
         </plugins>
+        </pluginManagement>
     </build>
 
 
