--- a/pom.xml
+++ b/pom.xml
@@ -71,6 +71,21 @@
                 <version>5.1.47</version>
             </dependency>
 
+<!--            <dependency>-->
+<!--                <groupId>org.springframework.boot</groupId>-->
+<!--                <artifactId>spring-boot-starter-data-redis</artifactId>-->
+<!--                <version>2.2.2.RELEASE</version>-->
+<!--            </dependency>-->
+<!--            <dependency>-->
+<!--                <groupId>org.springframework.session</groupId>-->
+<!--                <artifactId>spring-session-data-redis</artifactId>-->
+<!--                <version>2.2.2.RELEASE</version>-->
+<!--            </dependency>-->
+<!--            <dependency>-->
+<!--                <groupId>org.springframework.boot</groupId>-->
+<!--                <artifactId>spring-boot-starter-cache</artifactId>-->
+<!--            </dependency>-->
+
 
             <dependency>
                 <groupId>org.springframework.security</groupId>
