--- a/dipo-9001/src/main/resources/application.yml
+++ b/dipo-9001/src/main/resources/application.yml
@@ -21,7 +21,7 @@ spring:
     driver-class-name: com.mysql.jdbc.Driver
   jpa:
     hibernate:
-      ddl-auto: none
+      ddl-auto: update
     show-sql: true
     database-platform: org.hibernate.dialect.MySQL5Dialect
 
